misc fixes and profile upload button on mobile

--- a/static/css/partials/_cards.scss
+++ b/static/css/partials/_cards.scss
@@ -147,7 +147,7 @@
     display: flex;
     align-items: center;
     img {
-      margin-right: 10px;
+      margin-right: 5px;
     }
     a {
       color: #262626;
